syntax = "proto3";
package phoenix;

import "field.proto";

enum NoteType {
  TRANSPARENT = 0;
  OBFUSCATED = 1;
}

message Nullifier { Scalar h = 1; }

message Note {
  NoteType note_type = 1;
  fixed64 pos = 2;
  Nonce nonce = 3;
  CompressedPoint r_g = 4;
  CompressedPoint pk_r = 5;
  Scalar value_commitment = 6;
  oneof blinding_factor {
    Scalar transparent_blinding_factor = 7;
    bytes encrypted_blinding_factor = 8;
  }
  oneof value {
    fixed64 transparent_value = 9;
    bytes encrypted_value = 10;
  }
}

message DecryptedNote {
  NoteType note_type = 1;
  fixed64 pos = 2;
  fixed64 value = 3;
  Nonce nonce = 4;
  CompressedPoint r_g = 5;
  CompressedPoint pk_r = 6;
  Scalar value_commitment = 7;
  Scalar blinding_factor = 8;
  oneof rawBlindingFactor {
    Scalar transparent_blinding_factor = 9;
    bytes encrypted_blinding_factor = 10;
  }
  oneof rawValue {
    fixed64 transparent_value = 11;
    bytes encrypted_value = 12;
  }
}
